<?xml version="1.0"?>
<package format="2">
    <name>tl_expected</name>
    <version>0.0.1</version>
    <description>Header-only expected utility package for ROS1</description>

    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>
    <license>CC0-1.0</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>