<?xml version="1.0"?>
<package format="2">
    <name>dm_arm_controller</name>
    <version>0.0.0</version>
    <description>The dm_arm_controller package</description>

    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>serial_driver</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>actionlib</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>tl_optional</depend>

    <export>

    </export>
</package>
