<?xml version="1.0"?>
<package format="2">
  <name>dm_hw</name>
  <version>0.0.1</version>
  <description>ROS1 hardware interface for DM-Arm using the dm_hw Damiao serial/CAN driver.</description>

  <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>controller_manager</depend>
  <depend>dm_arm_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
